# weather-poc-coerce

./: .env  .gitignore  Cargo.toml  justfile
migrations/: 20230801230301_create_event_sourced_tables.sql  20230801230503_create_projection_offset_table.sql  20230801230751_create_weather_query_table.sql  20230801230815_create_monitored_zones_query_table.sql  20230801230858_create_update_locations_query_table.sql
resources/: application.yaml
src/: errors.rs  lib.rs  main.rs  server.rs
src/connect/: event_broadcast.rs  event_subscription.rs  mod.rs  subscription_processor.rs
src/model/: frame.rs  mod.rs  registrar.rs  tracing_processor.rs
src/model/registrar/: actor.rs  mod.rs  services.rs  view.rs
src/model/update/: controller.rs  location_status.rs  mod.rs  saga.rs  services.rs  state.rs  status.rs  view.rs
src/model/zone/: actor.rs  location.rs  mod.rs  queries.rs  state.rs
src/server/: api_errors.rs  api_result.rs  health_routes.rs  state.rs  weather_routes.rs
src/services/: noaa.rs
src/settings/: http_api_settings.rs  mod.rs  tests.rs
tests/noaa/: main.rs
